[build-system]
requires = ["setuptools >= 77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "boxpy"
dynamic = ["version"]
authors = [
    {name = "Roman Dobosz", email = "gryf73@gmail.com"}
]
license = "GPL-3.0-or-later"
description = "Run Linux cloud image on top of VirtualBox using commandline tool"
readme = "README.rst"
requires-python = ">=3.8"
keywords = ["vboxmanage", "virtualbox", "vm", "virtual machine", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Terminals",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only"
]
dependencies = [
    "pyyaml>=5.4.1",
    "requests>=2.26.0"
]

[project.urls]
Homepage = "https://github.com/gryf/boxpy"

[project.scripts]
boxpy = "box:main"

[tool.setuptools]
py-modules = ["box"]

[tool.setuptools.dynamic]
version = {attr = "box.__version__"}

[tool.ruff]
line-length = 79
indent-width = 4

[tool.ruff.lint]
extend-select = [
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",  # pycodestyle
    "F",  # pyflakes
    "FA",  # flake8-future-annotations
    "G",  # flake8-logging-format
    "N",  # pep8-naming
    "PGH",  # pygrep-hooks
    "PIE",  # flake8-pie
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "UP",  # pyupgrade
    "W",  # pycodestyle
    "YTT",  # flake8-2020
]
